--- a/src/sass/_masthead.scss
+++ b/src/sass/_masthead.scss
@@ -25,6 +25,11 @@ html[dark] {
   transition: none !important;
 }
 
+// bug? - https://github.com/lassekongo83/yt-classic-polymer/issues/42#issuecomment-907603942
+ytd-app[style*="--ytd-masthead-height:0px;"] #masthead-container {
+  visibility: hidden !important;
+}
+
 // login button
 html:not([dark]) {
   ytd-button-renderer.style-suggestive.ytd-masthead #button.ytd-button-renderer,
